2006-01-13 Perry
 PATCH: [ 1403454 ] Add comment to UniStdioFile.h
 (Cosmetic)
  Src/Common: UniFile.h

2006-01-13 Kimmo
 PATCH: [ 1039677 ] Alter text of Reset button label
  Src: Merge.rc
  Src/Language: */Merge*.rc

2006-01-12 Kimmo
 PATCH: [ 1399263 ] Captioned panes (new style)
  Src: ChildFrm.cpp DiffViewBar.h LocationBar.h Merge.dsp Merge.rc resource.h
  Src/Common new files: scbarcf.cpp scbarcf.h
  Src/Language: */Merge*.rc
 PATCH: [ 1399738 ] Filename bars to use caption colors
  Src: ChildFrm.cpp FilePathEdit.cpp FilePathEdit.h

2006-01-12 Tim
 PATCH: [ 1403412 ] German: Option 'Line Difference Coloring' looks broken
  Src/Languages/German: MergeGerman.rc

2006-01-11 WinMerge beta release 2.5.2

2006-01-11 Kimmo
 PATCH: [ 1402774 ] Use dark red color for 'binarydiff.ico'
  Submitted by Tim
  Src/res: binarydiff.ico
 PATCH: [ 1400845 ] Allow Shift+Ctrl+F3 to search selected text backwards
  With addition from Takashi for Shift+F3 backwards search
  Src: Merge.rc
  Src/editlib: ccrystaltextview.cpp
  Src/Language: */Merge*.rc
 BUG: [ 1400829 ] Crash trying to open location pane context menu
  Src: LocationView.cpp

2006-01-11 Tim
 PATCH: [ 1401420 ] New 'MergeDir' icon
  Src/res: MergeDir.ico

2006-01-10 Perry
 PATCH: [ 1400830 ] Fix drop to only do LoadProjectFile when 1 file dropped
 BUG: [ 1400797 ] Dropping two project files doesn't work to compare them
  (Also fixes extension test to be case-sensitive)
  Src: MainFrm.cpp

2006-01-09 Perry
 BUG: [ 1396222 ] CDirView::MoveSelection() is confused
 (Rename MoveSelection to MoveFocus & add more commenting)
  Src: DirActions.cpp DirView.cpp DirView.h

2006-01-07 Perry
 PATCH: [ 1398064 ] Catalan translation update
 By Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1398959 ] Implement GuessEncoding in QuickCompare
  Src: codepage_detect.cpp DiffWrapper.cpp DiffWrapper.h

2006-01-05 WinMerge experimental release 2.5.0.5 (cvs)

2006-01-04 Kimmo